# mindroom

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  hatch_build.py  justfile  pyproject.toml  run-sandbox-runner.sh  shell.nix  tach.toml  vulture_whitelist.py  zensical.toml
.claude/agents/: configfield-generator.md
.claude/skills/live-test/: SKILL.md
.github/: plugin-fleet.json
.github/scripts/: check_tool_extras_sync.py  normalize_appcast.py  update_mindroom_cask.py
.github/workflows/: plugin-ci.yml  plugin-fleet.yml  publish-helm-charts.yml  release.yml  smoke-stacks.yml
Casks/: mindroom.rb
cluster/k8s/client/: Chart.yaml  README.md  values.yaml
cluster/k8s/instance/: default-config.yaml  values.yaml
cluster/k8s/platform/: values.yaml
cluster/k8s/runtime/: README.md  values.yaml
cluster/k8s/tuwunel/: README.md  values.yaml
docs/: attachments.md  authorization.md  chat-commands.md  cli.md  dashboard.md  external-triggers.md  getting-started.md  hooks.md  images.md  index.md  knowledge.md  mcp.md  memory.md  oauth-framework.md  openai-api.md  openclaw.md  plugins.md  privacy.md  scheduling.md  support.md  terms.md  voice-calls.md  voice.md
docs/architecture/: bot-runtime.md  index.md  matrix-event-cache-security.md  matrix.md  orchestration.md
docs/configuration/: agents.md  index.md  models.md  router.md  teams.md
docs/deployment/: approved-egress.md  google-services-oauth.md  google-services-user-oauth.md  hosted-matrix.md  index.md  kubernetes.md  sandbox-proxy.md
docs/dev/: 2026-07-09-matrix-rtc-voice-calls-status.md  2026-07-18-matrix-event-cache-live-evidence.md  agent_configuration.md  exhaustive-live-test-checklist.md  matrix-event-cache-interaction-contract.md  matrix-event-cache-storage.md
docs/dev/archive/: skills-planning.md
docs/dev/evidence/: 2026-07-18-matrix-event-cache-live-summary.json
docs/dev/reviews/: 2026-07-18-pr-1586-fable-5-review.md  2026-07-19-pr-1583-plaintext-cache-live-evidence.md
docs/installation/: macos-app.md
docs/superpowers/plans/: 2026-05-20-agent-tool-docs-implementation.md  2026-05-26-coalescing-invariant-audit.md  2026-05-29-mindroom-macos-menu-bar-app.md
docs/superpowers/specs/: 2026-05-20-agent-tool-docs-design.md  2026-05-29-mindroom-macos-menu-bar-app-design.md
docs/tools/: agent-orchestration.md  ai-and-generation.md  builtin.md  calendar-and-scheduling.md  data-and-databases.md  desktop.md  dynamic-tools.md  execution-and-coding.md  index.md  matrix-and-attachments.md  matrix-message.md  memory-and-storage.md  messaging-and-social.md  web-scraping-and-browser.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/hooks/: useTools.ts
frontend/src/lib/: matrixIds.ts  providers.tsx
frontend/src/services/: configService.ts
frontend/src/store/: configStore.test.ts  configStore.ts
frontend/src/types/: config.ts
local/instances/deploy/: Dockerfile.mindroom  Dockerfile.mindroom-minimal  README.md
macos/: appcast.xml  build-macos-app.sh
macos/MindRoom/: Package.swift
macos/MindRoom/Resources/: Info.plist
saas-platform/: API_ENDPOINT_MAPPING.md  Dockerfile.platform-backend  Dockerfile.platform-frontend  pricing-config.yaml
saas-platform/docs/: authentication.md
saas-platform/platform-backend/: openapi.json
saas-platform/platform-frontend/: README.md  jest.setup.js  next.config.ts  package.json
scripts/: local_mindroom_provisioning_service.nix  local_mindroom_provisioning_service.py  smoke_mindroom_stack.py  sync_config.py
scripts/testing/: benchmark_prompt_assembly.py  benchmark_tool_call_overhead.py  prompt_cache_review.py  tool_auto_install_smoke.py
scripts/utilities/: rewrite_git_commits_ai.py
skills/mindroom-docs/: SKILL.md
src/mindroom/: agent_descriptions.py  agent_knowledge_descriptions.py  agent_policy.py  agent_run_context.py  agent_storage.py  agent_vault_access_grants.py  agents.py  ai.py  ai_run_metadata.py  ai_runtime.py  ai_turn_state.py  approval_events.py  approval_inbound.py  approval_manager.py  approval_transport.py  attachment_media.py  attachments.py  authorization.py  avatar_generation.py  azure_openai_model.py  background_tasks.py  bot.py  bot_room_lifecycle.py  bot_runtime_view.py  cancellation.py  chunking.py  claude_prompt_cache.py  claude_stream_retry.py  coalescing.py  coalescing_batch.py  coalescing_cleanup.py  coalescing_policy.py  codex_model.py  constants.py  conversation_resolver.py  conversation_state_writer.py  credential_policy.py  credentials.py  credentials_sync.py  delivery_gateway.py  (+83 more)
tests/: ai_user_id_helpers.py  bot_helpers.py  conftest.py  event_cache_test_support.py  history_helpers.py  identity_helpers.py  response_runner_helpers.py  test_agent_order_preservation.py  test_agent_policy.py  test_agent_response_logic.py  test_agent_run_context.py  test_agent_vault_access_tool.py  test_agent_vault_bridge.py  test_agents.py  test_agno_history.py  test_agno_team_patch.py  test_ai_error_message_display.py  test_ai_stream_collection.py  test_ai_turn_state.py  test_ai_user_id.py  test_approved_egress_tool.py  test_attachment_media.py  test_attachments.py  test_attachments_tool.py  test_authorization.py  test_authorization_config_update.py  test_avatar_generation.py  test_bot_knowledge.py  test_bot_media_dispatch.py  test_bot_reactions_approvals.py  test_bot_ready_hook.py  test_bot_response_actions.py  test_bot_scheduling.py  test_bot_sync_event_cache.py  test_browser_tool.py  test_bulk_thread_backfill.py  test_cancelled_response_hook.py  test_claude_stream_retry.py  test_cli.py  test_cli_config.py  (+305 more)
tests/api/: test_api.py  test_config_includes.py  test_config_lifecycle.py  test_credentials_api.py  test_dashboard_credential_scope.py  test_external_triggers_api.py  test_knowledge_api.py  test_matrix_operations.py  test_oauth_api.py  test_report_publishing_api.py  test_sandbox_forkserver.py  test_sandbox_runner_api.py  test_schedules_api.py  test_worker_egress_proxy_compose.py
tests/manual/: __init__.py  agent_vault_bridge_live_smoke.py  manual_test_message_sizes.py  matrix_event_cache_live_audit.py
(+602 files in other folders)
